# intercollegiatemathtournament.org

./: .env.example  .gitignore  Justfile  default.nix  docker-compose.yml  flake.nix  tailwind.config.js  wrangler.toml
.github/workflows/: deploy.yaml
backend/: Cargo.toml
backend/migrations/: 0001_create_users_table.sql  0002_make_name_required.sql  0003_create_events_and_participants.sql
backend/src/: db.rs  main.rs
backend/src/api/: auth.rs  error.rs  mod.rs  participants.rs  routes.rs
backend/src/models/: event.rs  mod.rs  participant.rs  user.rs
content/: icmt-2026.md
frontend/: README.md  package-lock.json  vite.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/lib/: api.ts
frontend/src/routes/: event-registration.tsx  index.tsx  login.tsx  register.tsx
old/: wrangler.toml
old/static/: _redirects  style.css
old/static/favicon/: site.webmanifest
old/templates/: base.html
static/: input.css
templates/: base.html  index.html  page.html
templates/shortcodes/: button_link.html
